Ajustes na tela de pedido

--- a/src/app/pedidos/pedidos.component.css
+++ b/src/app/pedidos/pedidos.component.css
@@ -3,5 +3,12 @@
     border-width: 1px;
     border-color: #1ca800;
     color: #ffffff;
-    float: left;
+    float: right; 
+    position: relative;
+}
+
+#count-pedidos {
+    float: right; 
+    position: relative; 
+    padding-top: 15px;
 }
