--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -72,10 +72,24 @@
         Data do cardápio: {{getDataCardapio(cardapio.dataCardapio) | date: 'dd/MM/yyyy'}}
       </mat-card-title>      
       <mat-card-content>
-        Valor do prato: R$ {{cardapio.valor}}
+        <b>Valor do prato:</b> R$ {{cardapio.valor}}
         <br>
-        Opções: {{cardapio.descricao}}
-      </mat-card-content>      
+        <b>Descrição:</b> {{cardapio.descricao}}
+        <br>
+        <br>
+        <mat-accordion>
+          <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                <b>Itens do cardápio</b>
+              </mat-panel-title>
+            </mat-expansion-panel-header>
+            <div *ngFor="let itemCardapio of cardapio.itensCardapio">
+                <br>{{itemCardapio.nome}}
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </mat-card-content>     
     </mat-card>
   </div>
 </div>
