Nao estava apresentando dia da semana.

--- a/src/app/cardapio/cardapio.component.html
+++ b/src/app/cardapio/cardapio.component.html
@@ -73,7 +73,7 @@
     <mat-card>
       <button style="float: right; position: relative" (click)="removerCardapio(cardapio)" mat-raised-button color="warn">Remover</button>
       <mat-card-title>      
-        Data do cardápio: {{getDiaSemana(cardapio.diaSemana)}}
+        {{getDiaSemana(cardapio.diaSemana)}}
       </mat-card-title>      
       <mat-card-content>
         <b>Valor do prato:</b> R$ {{cardapio.valor}}
