--- a/src/app/senha/senha.component.html
+++ b/src/app/senha/senha.component.html
@@ -1,7 +1,4 @@
-<mat-toolbar class="toolbar">  
-  <img width="48" height="48" src="./assets/marmita.png"/>
-  La Fome
-</mat-toolbar>
+<app-la-fome-toolbar></app-la-fome-toolbar>
 <div class="main">    
   <mat-card class="main-card">            
       <mat-card-title class="title">                
