--- a/src/app/relatorio/relatorio.component.html
+++ b/src/app/relatorio/relatorio.component.html
@@ -16,100 +16,98 @@
       </button>
     </mat-card-content>
   </mat-card>
-</div>
+  <br>
+  <mat-card>
+    <mat-card-content>
+      <span>Janeiro</span>
+      <span style="float: right;">R${{(valores['0'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Janeiro</span>
-    <span style="float: right;">R${{valores['0'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Fevereiro</span>
+      <span style="float: right;">R${{(valores['1'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Fevereiro</span>
-    <span style="float: right;">R${{valores['1'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Março</span>
+      <span style="float: right;">R${{(valores['2'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Março</span>
-    <span style="float: right;">R${{valores['2'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Abril</span>
+      <span style="float: right;">R${{(valores['3'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Abril</span>
-    <span style="float: right;">R${{valores['3'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Maio</span>
 
-<mat-card>
-  <mat-card-content>
-    <span>Maio</span>
+      <span style="float: right;">R${{(valores['4'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-    <span style="float: right;">R${{valores['4'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Junho</span>
+      <span style="float: right;">R${{(valores['5'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Junho</span>
-    <span style="float: right;">R${{valores['5'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Julho</span>
+      <span style="float: right;">R${{(valores['6'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Julho</span>
-    <span style="float: right;">R${{valores['6'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Agosto</span>
+      <span style="float: right;">R${{(valores['7'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Agosto</span>
-    <span style="float: right;">R${{valores['7'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Setembro</span>
+      <span style="float: right;">R${{(valores['8'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Setembro</span>
-    <span style="float: right;">R${{valores['8'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Outubro</span>
+      <span style="float: right;">R${{(valores['9'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Outubro</span>
-    <span style="float: right;">R${{valores['9'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Novembro</span>
+      <span style="float: right;">R${{(valores['10'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Novembro</span>
-    <span style="float: right;">R${{valores['10'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
+  <mat-card>
+    <mat-card-content>
+      <span>Dezembro</span>
+      <span style="float: right;">R${{(valores['11'] || 0) | number:'.2'}}</span>
+    </mat-card-content>
+  </mat-card>
 
-<mat-card>
-  <mat-card-content>
-    <span>Dezembro</span>
-    <span style="float: right;">R${{valores['11'] || 0}}</span>
-  </mat-card-content>
-</mat-card>
-
-<mat-card>
-  <mat-card-content>
-    <span><b>Total</b></span>
-    <span style="float: right;"><b>R${{total || 0}}</b></span>
-  </mat-card-content>
-</mat-card>
-
-<div class="card-form">  
+  <mat-card>
+    <mat-card-content>
+      <span><b>Total</b></span>
+      <span style="float: right;"><b>R${{(total || 0) | number:'.2'}}</b></span>
+    </mat-card-content>
+  </mat-card>
+  <br>
   <button (click)="voltar()" style="float: right; position: relative" mat-raised-button>Voltar</button>            
 </div>
